[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Telethon"
dynamic = ["version"]
description = "Full-featured Telegram client library for Python 3"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.5"
authors = [
    { name = "Lonami Exo", email = "totufals@hotmail.com" },
]
keywords = [
    "api",
    "chat",
    "client",
    "library",
    "messaging",
    "mtproto",
    "telegram",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "pyaes",
    "rsa",
]

[project.optional-dependencies]
cryptg = [
    "cryptg",
]

[project.urls]
Homepage = "https://telethon.dev"
Source = "https://codeberg.org/Lonami/Telethon"
Download = "https://codeberg.org/Lonami/Telethon/tags"
Documentation = "https://docs.telethon.dev"
Reference = "https://tl.telethon.dev"

[tool.hatch.version]
path = "telethon/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/telethon",
]
[tool.hatch.build.hooks.custom]
